--- a/yatube/templates/posts/group_list.html
+++ b/yatube/templates/posts/group_list.html
@@ -1,6 +1,8 @@
 {% extends 'base.html' %}
 {% block title %} Записи сообщества: {{ group.title }} {% endblock %}
 {% block content %}
+{% load user_filters %}
+{% load thumbnail %}
   <div class="container py-5">
     <h1>{{ group.title }}</h1>
     <p>
@@ -16,6 +18,9 @@
             Дата публикации: {{ post.pub_date|date:"d E Y" }}
           </li>
         </ul>
+        {% thumbnail post.image "960x339" crop="center" upscale=True as im %}
+          <img class="card-img my-2" src="{{ im.url }}" alt="">
+        {% endthumbnail %}
         <p>{{ post.text|linebreaksbr }}</p>
         <li>
           <a href="{% url 'posts:post_detail' post.id %}">Подробная информация</a>
