--- a/yatube/templates/posts/profile.html
+++ b/yatube/templates/posts/profile.html
@@ -1,8 +1,28 @@
 {% extends 'base.html' %}
 {% block title %} Профайл пользователя {{ author.username }} {% endblock %}
 {% block content %}
+{% load user_filters %}
+{% load thumbnail %}
+
+<div class="mb-5">
   <h1>Все посты пользователя {{ author.username }}</h1>
   <h3>Всего постов: {{ author.posts.count }} </h3>
+  {% if following %}
+  <a
+    class="btn btn-lg btn-light"
+    href="{% url 'posts:profile_unfollow' author.username %}" role="button"
+  >
+    Отписаться
+  </a>
+{% else %}
+    <a
+      class="btn btn-lg btn-primary"
+      href="{% url 'posts:profile_follow' author.username %}" role="button"
+    >
+      Подписаться
+    </a>
+ {% endif %}
+</div>
   {% for post in page_obj %}
     <article>
       <ul>
@@ -13,6 +33,9 @@
           Дата публикации: {{ post.pub_date|date:"d E Y" }}
         </li>
       </ul>
+      {% thumbnail post.image "960x339" crop="center" upscale=True as im %}
+        <img class="card-img my-2" src="{{ im.url }}" alt="">
+      {% endthumbnail %}
       <p>{{ post.text|linebreaksbr }}</p>
       <a href="{% url 'posts:post_detail' post.pk %}">подробная информация</a>
       {% if post.group %}
