--- a/yatube/templates/includes/comment.html
+++ b/yatube/templates/includes/comment.html
@@ -3,31 +3,31 @@
 {% load user_filters %}
 
 {% if user.is_authenticated %}
-<div class="card my-4">
-  <h5 class="card-header">Добавить комментарий:</h5>
-  <div class="card-body">
-    <form method="post" action="{% url 'posts:add_comment' post.id %}">
-      {% csrf_token %}      
-      <div class="form-group mb-2">
-        {{ form.text|addclass:"form-control" }}
-      </div>
-      <button type="submit" class="btn btn-primary">Отправить</button>
-    </form>
+  <div class="card my-4">
+    <h5 class="card-header">Добавить комментарий:</h5>
+    <div class="card-body">
+      <form method="post" action="{% url 'posts:add_comment' post.id %}">
+        {% csrf_token %}      
+        <div class="form-group mb-2">
+          {{ form.text|addclass:"form-control" }}
+        </div>
+        <button type="submit" class="btn btn-primary">Отправить</button>
+      </form>
+    </div>
   </div>
-</div>
-{% endif %}
+  {% endif %}
 
-{% for comment in comments %}
-  <div class="media mb-4 p-4 pb-0">
-    <div class="media-body">
-      <h5 class="mt-0">
-        <a class="text-decoration-none" href="{% url 'posts:profile' comment.author.username %}">
-          {{ comment.author.username }}
-        </a>
-      </h5>
-        <p>
-         {{ comment.text }}
-        </p>
+  {% for comment in comments %}
+    <div class="media mb-4 p-4 pb-0">
+      <div class="media-body">
+        <h5 class="mt-0">
+          <a class="text-decoration-none" href="{% url 'posts:profile' comment.author.username %}">
+            {{ comment.author.username }}
+          </a>
+        </h5>
+          <p>
+            {{ comment.text|linebreaks }}
+          </p>
       </div>
     </div>
-{% endfor %} 
+  {% endfor %}
