--- a/yatube/templates/posts/index.html
+++ b/yatube/templates/posts/index.html
@@ -6,26 +6,11 @@
 {% load thumbnail %}
   {% cache 20 index_page%}
     <h1>Последние обновления на сайте</h1>
-    {% include 'posts/includes/switcher.html' %}
-
+    {% include 'posts/includes/switcher.html' with follow=False index=True %}
     {% for post in page_obj %}
-      <ul>
-        <li>
-          Автор: <a href="{% url 'posts:profile' post.author.username %}">{{ post.author.username }}</a>
-        </li>
-        <li>
-          Дата публикации: {{ post.pub_date|date:"d E Y" }}
-        </li>
-      </ul>
-      {% thumbnail post.image "960x339" crop="center" upscale=True as im %}
-          <img class="card-img my-2" src="{{ im.url }}" alt="">
-      {% endthumbnail %}
-      <p>{{ post.text|linebreaksbr }}</p>
-      {% if post.group %}
-        <a href="{% url 'posts:group_list' post.group.slug %}">#{{post.group.title}}</a>
-      {% endif %}
+      {% include 'includes/post.html'%}
       {% if not forloop.last %}<hr>{% endif %} 
     {% endfor %}
-    {% include 'posts/paginator.html'%}
+    {% include 'posts/includes/paginator.html'%}
   {% endcache %}
 {% endblock %}
