--- a/yatube/templates/posts/post_detail.html
+++ b/yatube/templates/posts/post_detail.html
@@ -14,24 +14,15 @@
           Дата публикации: {{ post.pub_date|date:"d E Y" }}
         </li>
         {% if post.group %}
-        <!-- если у поста есть группа -->
           <li class="list-group-item">
-            Группа: <!-- Название группы -->
-            <a href="{% url 'posts:group_list' post.group.slug %}">
-              все записи группы
-            </a>
+            Группа: <a href="{% url 'posts:group_list' post.group.slug %}">{{post.group.title}}</a>
           </li>
         {% endif %}
         <li class="list-group-item">
-          Автор: {{ post.author.get_full_name }}
+          Автор: <a href="{% url 'posts:profile' post.author.username %}">{{ post.author.get_full_name}}</a>
         </li>
         <li class="list-group-item d-flex justify-content-between align-items-center">
-          Всего постов: {{ count }}
-        </li>
-        <li class="list-group-item">
-          <a href="{% url 'posts:profile' post.author.username %}">
-            все посты пользователя
-          </a>
+          Всего постов: {{ post.author.posts.count }}
         </li>
       </ul>
     </aside>
@@ -40,7 +31,7 @@
         <img class="card-img my-2" src="{{ im.url }}">
       {% endthumbnail %}
       <p>
-        {{ post.text }}
+        {{ post.text|linebreaks }}
       </p>
 
       {% if user == post.author %}
@@ -48,37 +39,7 @@
           редактировать запись
         </a>
       {% endif %}
-
-      {% if user.is_authenticated %}
-      <div class="card my-4">
-        <h5 class="card-header">Добавить комментарий:</h5>
-        <div class="card-body">
-          <form method="post" action="{% url 'posts:add_comment' post.id %}">
-            {% csrf_token %}      
-            <div class="form-group mb-2">
-              {{ form.text|addclass:"form-control" }}
-            </div>
-            <button type="submit" class="btn btn-primary">Отправить</button>
-          </form>
-        </div>
-      </div>
-      {% endif %}
-
-      {% for comment in comments %}
-        <div class="media mb-4 p-4 pb-0">
-          <div class="media-body">
-            <h5 class="mt-0">
-              <a class="text-decoration-none" href="{% url 'posts:profile' comment.author.username %}">
-                {{ comment.author.username }}
-              </a>
-            </h5>
-              <p>
-                {{ comment.text }}
-              </p>
-          </div>
-        </div>
-      {% endfor %} 
+      {% include 'includes/comment.html'%}
     </article>
   </div>
-
 {% endblock %}
