--- a/yatube/templates/posts/includes/post.html
+++ b/yatube/templates/posts/includes/post.html
@@ -1,10 +1,12 @@
 {% load thumbnail %}
 <article>
     <ul>
-      <li>
-        Автор: {{ post.author.get_full_name }}
-        <a href="{% url 'posts:profile' post.author.username %}">все посты пользователя</a>
-      </li>
+      {% if not no_author %}
+        <li>
+          Автор: {{ post.author.get_full_name }}
+          <a href="{% url 'posts:profile' post.author.username %}">все посты пользователя</a>
+        </li>
+      {%endif%}
       <li>
         Дата публикации: {{ post.pub_date|date:"d E Y" }}
       </li>
@@ -14,7 +16,7 @@
     {% endthumbnail %}
     <p>{{ post.text|linebreaksbr }}</p>   
     <a href="{% url 'posts:post_detail' post.id %}">подробная информация</a>
-    {% if post.group %}
+    {% if post.group and not no_group %}
       <p><a href="{% url 'posts:group_list' post.group.slug %}">#{{post.group.title}}</a></p>
     {% endif %}
-  </article>
+</article>
