--- a/yatube/templates/posts/post_detail.html
+++ b/yatube/templates/posts/post_detail.html
@@ -39,7 +39,7 @@
           редактировать запись
         </a>
       {% endif %}
-      {% include 'includes/comment.html'%}
+      {% include 'posts/includes/comment.html'%}
     </article>
   </div>
 {% endblock %}
