--- a/yatube/templates/posts/follow.html
+++ b/yatube/templates/posts/follow.html
@@ -1,14 +1,11 @@
 {% extends 'base.html' %}
 {% block title %} Посты избранных авторов {% endblock %}
 {% block content %}
-  {% load user_filters %}
-  {% load thumbnail %}
-
   <div class="container py-5">
     <h1>Посты избранных авторов</h1>
     {% include 'posts/includes/switcher.html' with follow=True %}
     {% for post in page_obj %}
-      {% include 'includes/post.html' %}
+      {% include 'posts/includes/post.html' %}
       {% if not forloop.last %}<hr>{% endif %}
     {% endfor %}
     {% include 'posts/includes/paginator.html' %}
