--- a/yatube/templates/posts/profile.html
+++ b/yatube/templates/posts/profile.html
@@ -5,10 +5,10 @@
   {% load thumbnail %}
   <div class="mb-5">
     <h1>Все посты пользователя {{ author.username }}</h1>
-    <h3>Всего постов: {{ author.posts.count }}</h3>
-    <h3>Колличество подписок: {{ author.follower.count }}</h3>
-    <h3>Количество подписчиков: {{ author.following.count }}</h3>
-    <h3>Всего комментариев: {{ author.comments.count }} </h3>
+    <h3>Постов: {{ author.posts.count }}</h3>
+    <h3>Подписок: {{ author.follower.count }}</h3>
+    <h3>Подписчиков: {{ author.following.count }}</h3>
+    <h3>Комментариев: {{ author.comments.count }} </h3>
     {% if user.is_authenticated and author != user %}
       {% if following %}
       <a class="btn btn-lg btn-light"
@@ -21,9 +21,9 @@
       {% endif %}
     {% endif%}
   </div>
-    {% for post in page_obj %}
-      {% include 'includes/post.html' %}
-      {% if not forloop.last %}<hr>{% endif%}
-    {% endfor %}
-    {% include 'posts/includes/paginator.html' %}
+  {% for post in page_obj %}
+    {% include 'posts/includes/post.html' with no_author=True %}
+    {% if not forloop.last %}<hr>{% endif%}
+  {% endfor %}
+  {% include 'posts/includes/paginator.html' %}
 {% endblock %}
