--- a/yatube/templates/posts/profile.html
+++ b/yatube/templates/posts/profile.html
@@ -22,7 +22,7 @@
     {% endif%}
   </div>
   {% for post in page_obj %}
-    {% include 'posts/includes/post.html' with no_author=True %}
+    {% include 'posts/includes/post.html' with hide_author=True %}
     {% if not forloop.last %}<hr>{% endif%}
   {% endfor %}
   {% include 'posts/includes/paginator.html' %}
