--- a/yatube/templates/posts/includes/comment.html
+++ b/yatube/templates/posts/includes/comment.html
@@ -17,7 +17,7 @@
   </div>
 {% endif %}
 
-{% for comment in comments %}
+{% for comment in post.comments.all %}
   <div class="media mb-4 p-4 pb-0">
     <div class="media-body">
       <h5 class="mt-0">
